Overflow fix

--- a/src/components/carouselnew/carouselnew.module.scss
+++ b/src/components/carouselnew/carouselnew.module.scss
@@ -1,6 +1,7 @@
 .react__slick__parent {
   width: 100%;
   height: 70vh;
+  overflow: hidden;
   // border: 1px solid red;
   .slider__card {
     position: relative;
