--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,3 +1,12 @@
+@media only screen and (max-width: 768px) {
+  .left__right__parent {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+}
+
 .footer__parent {
   position: relative;
   width: 100%;
